[package]
name = "chatgpt-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["http2"] }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
dotenvy = "0.15"
tower = "0.4"

# 如果需要 streaming，可再引入以下：
# futures = "0.3"
# tokio-util = "0.7"

